# color

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildNetHttp.cmake
core/: color_client.cc  color_client.h  color_history.cc  color_history.h  color_message.h  color_server.cc  color_server.h
core/include/color/: client.h  history.h  message.h  server.h
demo/: readme.md
demo/src/: CMakeLists.txt  color_client_main.cc  color_server_main.cc
docs/: bidi-chat.md  failover.md  plan.md  protocol.md  readme.md  requirements.md  spec.md
docs/claude/: failover.md  plan.md  protocol.md  verification-plan.md  verification.md
src/: readme.md
src/client/: CMakeLists.txt  color_client_main.cc  color_http_client.cc  color_http_client.h  curl_transport.cc  curl_transport.h  fault_http_transport.cc  fault_http_transport.h
src/core/: color_checkpoint.h  color_client.cc  color_client.h  color_history.h  color_message.h  color_server.cc  color_server.h
src/server/: CMakeLists.txt  color_interceptor.cc  color_interceptor.h  color_server_main.cc  thread_pool_executor.h
src/wire/: CMakeLists.txt  color_json.cc  color_json.h  failover_json.cc  failover_json.h
verification/: CMakeLists.txt  plan.md  readme.md
verification/src/: checker.h  fuzz_main.cpp  sim_network.h
